--- a/index.html
+++ b/index.html
@@ -12,26 +12,30 @@
     <div class="calculator">
         <!-- Display -->
         <div class="calculator-display">
+            <p class="history"></p>
             <h1>0</h1>
         </div>
         <!-- Buttons -->
         <div class="calculator-buttons">
-            <button class="operator" value="+">+</button>
-            <button class="operator" value="-">-</button>
-            <button class="operator" value="*">×</button>
+            <button class="clear" id="clear-btn">C</button>
+            <button class="operator" value="√">√</button>
+            <button class="operator" value="^"><span class="small-base">x<sup>y</sup></span></button>
             <button class="operator" value="/">÷</button>
             <button value="7">7</button>
             <button value="8">8</button>
             <button value="9">9</button>
+            <button class="operator" value="*">×</button>
             <button value="4">4</button>
             <button value="5">5</button>
             <button value="6">6</button>
+            <button class="operator" value="-">-</button>
             <button value="1">1</button>
             <button value="2">2</button>
             <button value="3">3</button>
-            <button class="decimal" value=".">.</button>
+            <button class="operator" value="+">+</button>
             <button value="0">0</button>
-            <button class="clear" id="clear-btn">C</button>
+            <button class="sign" value="+">+/-</button>
+            <button class="decimal" value=".">.</button>
             <button class="equal-sign operator" value="=">=</button>
         </div>
     </div>
